busy-indicator: upgrade

--- a/demo/app/demos/busy-indicator/demo.component.html
+++ b/demo/app/demos/busy-indicator/demo.component.html
@@ -1,9 +1,9 @@
 <h3>Simple busy indicator</h3>
-<vcl-busy-indicator></vcl-busy-indicator>
+<vcl-busy-indicator>Loading...</vcl-busy-indicator>
 <br><br>
 
-<h3>Horizontal busy indicators</h3>
-<vcl-busy-indicator [layout]="'horizontal'"></vcl-busy-indicator>
+<h3>Horizontal busy indicator</h3>
+<vcl-busy-indicator [layout]="'horizontal'" class="huge">Loading...</vcl-busy-indicator>
 <br><br>
 
 <h3>Busy indicator with text</h3>
