--- a/lib/ng-vcl/src/embedded-input-group/embedded-input-group.component.html
+++ b/lib/ng-vcl/src/embedded-input-group/embedded-input-group.component.html
@@ -8,4 +8,4 @@
   <vcl-icon [icon]='appIcon'></vcl-icon>
 </div>
 
-<ng-content select="button[vclEmbeddedInputGroup]"></ng-content>
+<ng-content select="button[vcl-embedded-input-group]"></ng-content>
