--- a/demo/app/demos/textarea/demo.component.html
+++ b/demo/app/demos/textarea/demo.component.html
@@ -1,6 +1,6 @@
 <h3>Default</h3>
-<textarea vcl-textarea [(ngModel)]="data1" rows="5"></textarea>
+<textarea vclInput [(ngModel)]="data1" rows="5"></textarea>
 
 
 <h3>Textarea with autogrow (minRows=5, maxRows=10)</h3>
-<textarea vcl-textarea [(ngModel)]="data2" [autogrow]="true" [minRows]="5" [maxRows]="10"></textarea>
+<textarea vclInput [(ngModel)]="data2" [autogrow]="true" [minRows]="5" [maxRows]="10"></textarea>
