--- a/lib/ng-vcl/src/password-input/password-input.component.html
+++ b/lib/ng-vcl/src/password-input/password-input.component.html
@@ -1,7 +1,6 @@
 <ng-content></ng-content>
-<button vcl-button
+<button vcl-icon-button
         [icon]="buttonIcon" 
         [disabled]="disabled"
-        class="vclSquare" 
         (click)="toggle()">
 </button>
