--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -13,7 +13,7 @@
       </vcl-token-list>
     </div>
 
-    <button vcl-button
+    <button vcl-icon-button
       [disabled]="disabled"
       type="button"
       tabindex="-1"
