--- a/lib/ng-vcl/src/token/token.component.html
+++ b/lib/ng-vcl/src/token/token.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="tokenIcon" vcl-icogram [appIcon]="tokenIcon" ></div>
+<vcl-icogram *ngIf="tokenIcon"  [appIcon]="tokenIcon" ></vcl-icogram>
 <span class="vclTokenLabel">{{label}}</span>
-<button vcl-button
+<button vcl-icon-button
         [disabled]="isDisabled"
         *ngIf="removable" 
         class="vclTransparent"
