--- a/lib/ng-vcl/src/button/button-icogram.component.html
+++ b/lib/ng-vcl/src/button/button-icogram.component.html
@@ -1,2 +1,4 @@
-<vcl-icogram [appIcon]="appIcon" [prepIcon]="prepIcon"><ng-content></ng-content></vcl-icogram>
+<vcl-icogram [appIcon]="appIcon" [prepIcon]="prepIcon">
+  <ng-content></ng-content>
+</vcl-icogram>
 
